bpo-29248: Fix readlink bug os

Signed-off-by: SSE4 <tomskside@gmail.com>